Aquarium/style.css
@charset "UTF-8";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --color-one: #11407e;
  --color-two: #1b9cc7;
  --color-three: #dae4ec;
  --color-four: #dae4ec3f;
  --color-five: #e9f0ff86;
  --font-one: "Schoolbell", cursive;
}

body {
  width: 100%;
  height: 100dvh;
  overflow: hidden;
  background: linear-gradient(var(--color-one), var(--color-two));
  display: flex;
  justify-content: center;
  align-items: center;
}

#preloader {
  display: flex;
  justify-content: center;
  align-items: center;
  display: block;
  margin: auto;
}

.custom_loader_bar-wave {
  width: 52px;
  height: 52px;
  position: relative;
}

.custom_loader_bar-wave {
  display: flex;
  gap: 5.2px;
  align-items: center;
  justify-content: center;
  width: 114px;
}

.custom_loader_bar-wave div {
  width: 11.4px;
  height: 52px;
  background: var(--color-three);
  animation: custom_bar_wave 1.0909090909090908s ease-in-out infinite;
}

.custom_loader_bar-wave div:nth-child(2) {
  animation-delay: 0.1s;
}
.custom_loader_bar-wave div:nth-child(3) {
  animation-delay: 0.2s;
}
.custom_loader_bar-wave div:nth-child(4) {
  animation-delay: 0.3s;
}
.custom_loader_bar-wave div:nth-child(5) {
  animation-delay: 0.4s;
}

@keyframes custom_bar_wave {
  0%,
  100% {
    transform: scaleY(0.5);
  }
  50% {
    transform: scaleY(1);
  }
}

main {
  display: none;
  width: 85%;
  height: 85dvh;
  border: 6px solid var(--color-five);
  border-radius: 16px;
  flex-direction: column;
  position: relative;
}

header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  height: 60px;
  background-color: var(--color-four);
  border-bottom: 1px solid var(--color-five);
}

h1 {
  font-family: var(--font-one);
  font-size: 14px;
  color: #0c1f38;
}

nav {
  width: 100%;
  height: 60px;
  background-color: #5985a865;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  border-bottom: 1px solid var(--color-five);
}

.navFish {
  width: 28px;
}

.navButton {
  border-radius: 50%;
  padding: 4px;
  transition: 0.2s ease all;
  display: flex;
  justify-content: center;
  align-items: center;
}

.navButton:hover {
  cursor: pointer;
  background-color: var(--color-two);
  transform: scale(1.1);
}

.fish {
  position: absolute;
  pointer-events: none;
  display: block;
  transition: left 3s linear, top 3s linear, transform 0.3s ease;
}

section#Aquarium {
  width: 100%;
  height: 85%;
  position: relative;
  overflow: hidden;
  border-radius: 5px;
}

.corals {
  width: 100%;
  max-width: 850px;
  position: absolute;
  bottom: 0%;
  filter: blur(0.8px);
}

.btn {
  font-size: 12px;
  padding: 4px;
  border-radius: 7px;
  background-color: var(--color-five);
  color: var(--color-one);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  font-weight: 700;
  border: 1px solid var(--color-one);
  transition: all 0.2s ease;
}

.btn:hover {
  background-color: var(--color-three);
  cursor: pointer;
}

